--- a/src/styles/uber/_uber-commitment.scss
+++ b/src/styles/uber/_uber-commitment.scss
@@ -7,6 +7,7 @@
   height: 402px;
   background-color: $ubergreybackground;
   @include flexdisplay(row,flex-start,center);
+  overflow: hidden;
 
   .uber-commitment-text {
     width: 718px;
